--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dependencies": {
         "fs-extra": "^10.1.0",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "typescript": "^4.0.3"
     },
     "devDependencies": {
         "@babel/core": "^7.19.0",
@@ -28,7 +29,10 @@
         "style-loader": "^3.3.1",
         "webpack": "^5.74.0",
         "webpack-cli": "^4.10.0",
-        "webpack-dev-server": "^4.10.1"
+        "mini-css-extract-plugin": "^0.12.0",
+        "webpack-dev-server": "^4.10.1",
+        "clean-webpack-plugin": "^3.0.0",
+        "copy-webpack-plugin": "^6.2.0"
     },
     "bin": {
         "react-boilerplate": "./bin/start.js"
